Add default-roles in InitSetup